2014-12-18  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (EXTRA_DIST): Add testfile-macros-0xff.bz2.

2014-12-12  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (deleted_lib_so_CFLAGS): Add
	-fasynchronous-unwind-tables.

2014-12-11  Josh Stone  <jistone@redhat.com>

	* run-addr2line-i-lex-test.sh: New test.
	* testfile-lex-inlines.bz2: New testfile.
	* Makefile.am (EXTRA_DIST): Add run-addr2line-i-lex-test.sh and
	testfile-lex-inlines.bz2.
	(TESTS): Add run-addr2line-i-lex-test.sh.

2014-12-10  Josh Stone  <jistone@redhat.com>

	* run-addr2line-i-test.sh: Test 0x5f0 to make sure linkage_name is
	preferred over the plain die name.

2014-12-02  Petr Machata  <pmachata@redhat.com>

	* dwarf-getmacros.c (mac): Skip over DW_MACINFO_undef,
	DW_MACRO_GNU_undef_indirect opcodes.  Add a default branch.
	(main): Initialize off to DWARF_GETMACROS_START when an extra
	command line argument is passed.
	* testfile-macros-0xff.bz2: New test case.
	* testfile-macros-0xff.s: New file (source for the above).
	* run-dwarf-getmacros.sh: Add two tests.

2014-11-27  Mark Wielaard  <mjw@redhat.com>

	* vdsosyms.c (main): Call dwfl_linux_proc_attach.

2014-11-21  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-A.sh: New test.
	* testfileppc32attrs.o.bz2: New test file.
	* Makefile.am (TESTS): Add run-readelf-A.sh.
	(EXTRA_DIST): Add run-readelf-A.sh and testfileppc32attrs.o.bz2.

2014-11-10  Mark Wielaard  <mjw@redhat.com>

	* vdsosyms.c: New test.
	* Makefile.am (check_PROGRAMS): Add vdsosyms.
	(TESTS): Likewise.
	(vdsosyms_LDADD): New variable.

2014-09-10  Petr Machata  <pmachata@redhat.com>

	* dwarf-getmacros.c: Update to use the new macro iteration
	interfaces.
	* run-dwarf-getmacros.sh: Adjust, add a test that uses
	testfile-macros.

2014-10-06  Mark Wielaard  <mjw@redhat.com>

	* run-aggregate-size.sh: Add testfile-sizes3.o test case.
	* testfile-sizes3.o.bz2: New test file.
	* Makefile.am (EXTRA_DIST): Add testfile-sizes3.o.bz2.

2014-10-02  Mark Wielaard  <mjw@redhat.com>
