@@ -15,7 +15,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-. $srcdir/test-subr.sh
+. $srcdir/backtrace-subr.sh
 
 tempfiles deleted deleted-lib.so
 cp -p ${abs_builddir}/deleted ${abs_builddir}/deleted-lib.so .
@@ -28,14 +28,15 @@ unset VALGRIND_CMD
 pid=$(testrun ${abs_builddir}/deleted)
 sleep 1
 rm -f deleted deleted-lib.so
-tempfiles bt
+tempfiles bt bt.err
 
 set VALGRIND_CMD="$OLD_VALGRIND_CMD"
 # It may have non-zero exit code with:
 # .../elfutils/src/stack: dwfl_thread_getframes tid 26376 at 0x4006c8 in .../elfutils/tests/deleted: no matching address range
-testrun ${abs_top_builddir}/src/stack -p $pid >bt || true
-cat bt
+testrun ${abs_top_builddir}/src/stack -p $pid 1>bt 2>bt.err || true
+cat bt bt.err
 kill -9 $pid
 wait
+check_native_unsupported bt.err deleted
 grep -qw libfunc bt
 grep -qw main bt
